Call actions instead of DatasheetServices in presenters